# smallRasterizer

./: CMakeLists.txt  CMakeSettings.json  README.md  geometry.h  main.cpp  model.cpp  model.h  pbrShader.h  shader.h  shadowShader.h  tgaimage.cpp  transform.h
asset/horse/: horse.mtl
